response: add access list and update docs
